--- a/Swashbuckle.OData/packages.config
+++ b/Swashbuckle.OData/packages.config
@@ -2,8 +2,10 @@
 <packages>
   <package id="Flurl" version="1.1.2" allowedVersions="(,2.0.0)" targetFramework="net452" />
   <package id="Microsoft.AspNet.OData" allowedVersions="(,6.0.0)" version="5.9.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.OData.Versioning" version="2.0.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" allowedVersions="(,6.0.0)" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" allowedVersions="(,6.0.0)" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Versioning" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" allowedVersions="(,6.0.0)" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.OData.Core" allowedVersions="(,7.0.0]" version="6.15.0" targetFramework="net452" />
   <package id="Microsoft.OData.Edm" allowedVersions="(,7.0.0]" version="6.15.0" targetFramework="net452" />
