--- a/Swashbuckle.OData.Tests/packages.config
+++ b/Swashbuckle.OData.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="coveralls.io" version="1.3.4" targetFramework="net452" />
+  <package id="DotNet.Contracts" version="1.10.20606.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="FluentAssertions" version="4.14.0" targetFramework="net452" />
   <package id="Flurl" version="1.1.2" allowedVersions="(,2.0.0)" targetFramework="net452" />
